fix: page top padding on mobile

--- a/components/page/page.module.scss
+++ b/components/page/page.module.scss
@@ -27,7 +27,7 @@
 
         @media (max-width: utilities.$small-width) {
             min-width: 100%;
-            padding-top: calc(var(--line-height) * 3);
+            padding-top: 0.5in;
             padding-left: 0.25in;
             padding-right: 0.25in;
         }
